@@ -714,6 +714,8 @@ exit:
     eiu->pkgURL = _free(eiu->pkgURL);
     eiu->argv = _free(eiu->argv);
 
+    rpmtsEmpty(ts);
+
     return eiu->numFailed;
 }
 /*@=bounds@*/
@@ -810,6 +812,8 @@ int rpmErase(rpmts ts,
 	stopUninstall = 1;
 	ps = rpmpsFree(ps);
     }
+
+    rpmtsEmpty(ts);
 
     return numFailed;
 }
@@ -1049,11 +1053,15 @@ int rpmRollback(rpmts ts, struct rpmInstallArguments_s * ia, const char ** argv)
     int numAdded;
     int numRemoved;
     rpmps ps;
+    int _unsafe_rollbacks = 0;
+    rpmtransFlags transFlags = ia->transFlags;
 
     if (argv != NULL && *argv != NULL) {
 	rc = -1;
 	goto exit;
     }
+
+    _unsafe_rollbacks = rpmExpandNumeric("%{?_unsafe_rollbacks}");
 
     vsflags = rpmExpandNumeric("%{?_vsflags_erase}");
     if (ia->qva_flags & VERIFY_DIGEST)
@@ -1065,7 +1073,7 @@ int rpmRollback(rpmts ts, struct rpmInstallArguments_s * ia, const char ** argv)
     vsflags |= RPMVSF_NEEDPAYLOAD;	/* XXX no legacy signatures */
     ovsflags = rpmtsSetVSFlags(ts, vsflags);
 
-    (void) rpmtsSetFlags(ts, ia->transFlags);
+    (void) rpmtsSetFlags(ts, transFlags);
 
     itids = IDTXload(ts, RPMTAG_INSTALLTID);
     if (itids != NULL) {
@@ -1119,12 +1127,14 @@ int rpmRollback(rpmts ts, struct rpmInstallArguments_s * ia, const char ** argv)
 	if (thistid == 0 || thistid < ia->rbtid)
 	    break;
 
+	rpmtsEmpty(ts);
+	(void) rpmtsSetFlags(ts, transFlags);
+
 	/* Install the previously erased packages for this transaction. */
 	while (rp != NULL && rp->val.u32 == thistid) {
 
-/*@-nullpass@*/ /* FIX: rp->key may be NULL */
-	    rpmMessage(RPMMESS_DEBUG, "\t+++ %s\n", rp->key);
-/*@=nullpass@*/
+	    rpmMessage(RPMMESS_DEBUG, "\t+++ install %s\n",
+			(rp->key ? rp->key : "???"));
 
 /*@-abstract@*/
 	    rc = rpmtsAddInstallElement(ts, rp->h, (fnpyKey)rp->key,
@@ -1152,18 +1162,21 @@ int rpmRollback(rpmts ts, struct rpmInstallArguments_s * ia, const char ** argv)
 	while (ip != NULL && ip->val.u32 == thistid) {
 
 	    rpmMessage(RPMMESS_DEBUG,
-			"\t--- rpmdb instance #%u\n", ip->instance);
+			"\t--- erase h#%u\n", ip->instance);
 
 	    rc = rpmtsAddEraseElement(ts, ip->h, ip->instance);
 	    if (rc != 0)
 		goto exit;
 
 	    numRemoved++;
-#ifdef	NOTYET	/* XXX don't count erasures yet */
-	    rpmcliPackagesTotal++;
-#endif
-	    if (!(ia->installInterfaceFlags & ifmask))
+
+	    if (_unsafe_rollbacks)
+		rpmcliPackagesTotal++;
+
+	    if (!(ia->installInterfaceFlags & ifmask)) {
 		ia->installInterfaceFlags |= INSTALL_ERASE;
+		(void) rpmtsSetFlags(ts, (transFlags | RPMTRANS_FLAG_REVERSE));
+	    }
 
 #ifdef	NOTYET
 	    ip->instance = 0;
@@ -1222,12 +1235,15 @@ int rpmRollback(rpmts ts, struct rpmInstallArguments_s * ia, const char ** argv)
 	    }
 	}
 
+
     } while (1);
 
 exit:
-
     rtids = IDTXfree(rtids);
     itids = IDTXfree(itids);
+
+    rpmtsEmpty(ts);
+    (void) rpmtsSetFlags(ts, transFlags);
 
     return rc;
 }
